--- a/examples/01_Quick_Start.ipynb
+++ b/examples/01_Quick_Start.ipynb
@@ -12,7 +12,7 @@
    "outputs": [],
    "source": [
     "# If you run this notebook on Google Colaboratory, uncomment the below to install automl_alex.\n",
-    "#!pip install --quiet automl-alex"
+    "#!pip install --quiet automl_alex"
    ]
   },
   {
@@ -28,12 +28,13 @@
     {
      "output_type": "stream",
      "name": "stdout",
-     "text": "0.05.08.11\n"
+     "text": "0.05.15\n"
     }
    ],
    "source": [
     "import automl_alex\n",
     "import sklearn\n",
+    "import time\n",
     "from automl_alex import AutoML, AutoMLClassifier\n",
     "print(automl_alex.__version__)"
    ]
@@ -90,59 +91,13 @@
     "from sklearn.datasets import fetch_openml\n",
     "from sklearn.model_selection import train_test_split\n",
     "dataset = fetch_openml(name='credit-g', version=1, as_frame=True)\n",
+    "dataset.target = dataset.target.astype('category').cat.codes\n",
     "dataset.data.head(5)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-05-07T01:05:55.928291Z",
-     "start_time": "2020-05-07T01:05:55.905770Z"
-    }
-   },
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": "0    good\n1     bad\n2    good\n3    good\n4     bad\nName: class, dtype: category\nCategories (2, object): [good, bad]"
-     },
-     "metadata": {},
-     "execution_count": 4
-    }
-   ],
-   "source": [
-    "dataset.target[:5]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2020-05-07T01:05:56.353082Z",
-     "start_time": "2020-05-07T01:05:56.345076Z"
-    }
-   },
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": "0    0\n1    1\n2    0\n3    0\n4    1\ndtype: int8"
-     },
-     "metadata": {},
-     "execution_count": 5
-    }
-   ],
-   "source": [
-    "dataset.target = dataset.target.astype('category').cat.codes\n",
-    "dataset.target[:5]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-05-07T01:05:56.756465Z",
@@ -156,7 +111,7 @@
       "text/plain": "((750, 20), (250, 20))"
      },
      "metadata": {},
-     "execution_count": 6
+     "execution_count": 4
     }
    ],
    "source": [
@@ -176,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-05-07T01:05:59.848085Z",
@@ -193,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-05-06T17:01:04.947762Z",
@@ -204,16 +159,17 @@
     {
      "output_type": "stream",
      "name": "stdout",
-     "text": "\n Step1: Opt StackingModels\nOne iteration takes ~ 0.5 sec\nStart Auto calibration parameters\nStart optimization with the parameters:\nCV =10\nScore_folds =3\nOpt_lvl =3\nCold_start =48.0\nEarly_stoping =100\nMetric =roc_auc_score\nDirection =maximize\nStart Model LightGBM Score roc_auc_score = 0.6909\n112it [07:36,  4.63s/it, Best Score roc_auc_score = 0.803 +- 0.033468 Best Model: CatBoost]\n EarlyStopping Exceeded: Best Score: 0.803roc_auc_score\n\n Step2: Get new X_train from StackingModels\n100%|██████████| 25/25 [05:25<00:00, 13.04s/it]\n\n StackModels Mean roc_auc_score Score Train:0.7968\n\n Step3: Opt MetaModels\n100%|██████████| 2/2 [07:50<00:00, 235.06s/it, Model: XGBoost | Best Score roc_auc_score = 0.6604 +- 0.038579 ]\n\n Step4: Predict from MetaModels\n100%|██████████| 10/10 [00:32<00:00,  3.23s/it]\nMetaModels Mean roc_auc_score Score Train : 0.7877764334207165\n\n Finish!\n"
+     "text": "\n Opt StackingModels\nOne iteration takes ~ 0.5 sec\nStart Auto calibration parameters\nStart optimization with the parameters:\nScore_folds =3\nOpt_lvl =3\nCold_start =87.0\nEarly_stoping =174.0\nMetric =roc_auc_score\nDirection =maximize\nDefault model roc_auc_score = 0.6891\n########################################\nOptimize: : 185it [12:28,  6.07s/it, CatBoost Best Score roc_auc_score = 0.8301 +- 0.041296]\n EarlyStopping Exceeded: Best Score: 0.7888roc_auc_score\nOptimize: : 185it [12:28,  4.05s/it, CatBoost Best Score roc_auc_score = 0.8301 +- 0.041296]\n\n Predict from StackingModels\n  0%|          | 0/25 [00:00<?, ?it/s]\n Mean Score roc_auc_score on 30 Folds: 0.7983 std: 0.050993\n  4%|▍         | 1/25 [00:47<18:48, 47.02s/it]\n Mean Score roc_auc_score on 30 Folds: 0.8013 std: 0.048718\n  8%|▊         | 2/25 [01:32<17:48, 46.44s/it]\n Mean Score roc_auc_score on 30 Folds: 0.8 std: 0.048258\n 12%|█▏        | 3/25 [01:54<14:22, 39.19s/it]\n Mean Score roc_auc_score on 30 Folds: 0.7994 std: 0.051537\n 16%|█▌        | 4/25 [02:35<13:57, 39.90s/it]\n Mean Score roc_auc_score on 30 Folds: 0.7985 std: 0.050019\n 20%|██        | 5/25 [03:19<13:39, 40.96s/it]\n Mean Score roc_auc_score on 30 Folds: 0.7988 std: 0.049318\n 24%|██▍       | 6/25 [03:41<11:11, 35.33s/it]\n Mean Score roc_auc_score on 30 Folds: 0.7932 std: 0.048022\n 28%|██▊       | 7/25 [04:28<11:38, 38.82s/it]\n Mean Score roc_auc_score on 30 Folds: 0.7936 std: 0.049869\n 32%|███▏      | 8/25 [05:12<11:27, 40.47s/it]\n Mean Score roc_auc_score on 30 Folds: 0.8048 std: 0.051475\n 36%|███▌      | 9/25 [05:52<10:41, 40.11s/it]\n Mean Score roc_auc_score on 30 Folds: 0.8008 std: 0.047599\n 40%|████      | 10/25 [06:34<10:12, 40.85s/it]\n Mean Score roc_auc_score on 30 Folds: 0.8072 std: 0.048263\n 44%|████▍     | 11/25 [06:55<08:05, 34.70s/it]\n Mean Score roc_auc_score on 30 Folds: 0.7989 std: 0.044409\n 48%|████▊     | 12/25 [07:19<06:50, 31.56s/it]\n Mean Score roc_auc_score on 30 Folds: 0.8057 std: 0.046127\n 52%|█████▏    | 13/25 [08:02<07:02, 35.19s/it]\n Mean Score roc_auc_score on 30 Folds: 0.7987 std: 0.051153\n 56%|█████▌    | 14/25 [08:46<06:55, 37.78s/it]\n Mean Score roc_auc_score on 30 Folds: 0.8 std: 0.050956\n 60%|██████    | 15/25 [09:07<05:26, 32.70s/it]\n Mean Score roc_auc_score on 30 Folds: 0.7918 std: 0.054657\n 64%|██████▍   | 16/25 [09:35<04:41, 31.28s/it]\n Mean Score roc_auc_score on 30 Folds: 0.8045 std: 0.047008\n 68%|██████▊   | 17/25 [10:00<03:55, 29.38s/it]\n Mean Score roc_auc_score on 30 Folds: 0.7973 std: 0.050509\n 72%|███████▏  | 18/25 [10:40<03:47, 32.45s/it]\n Mean Score roc_auc_score on 30 Folds: 0.8004 std: 0.04791\n 76%|███████▌  | 19/25 [11:24<03:35, 35.93s/it]\n Mean Score roc_auc_score on 30 Folds: 0.8061 std: 0.044126\n 80%|████████  | 20/25 [11:42<02:32, 30.60s/it]\n Mean Score roc_auc_score on 30 Folds: 0.7855 std: 0.047974\n 84%|████████▍ | 21/25 [13:33<03:39, 54.80s/it]\n Mean Score roc_auc_score on 30 Folds: 0.8024 std: 0.043988\n 88%|████████▊ | 22/25 [13:58<02:17, 45.84s/it]\n Mean Score roc_auc_score on 30 Folds: 0.8044 std: 0.048931\n 92%|█████████▏| 23/25 [14:24<01:19, 39.97s/it]\n Mean Score roc_auc_score on 30 Folds: 0.8079 std: 0.046511\n 96%|█████████▌| 24/25 [14:45<00:34, 34.09s/it]\n Mean Score roc_auc_score on 30 Folds: 0.7963 std: 0.049121\n100%|██████████| 25/25 [15:28<00:00, 37.13s/it]\n\n StackModels Mean roc_auc_score Score Train:0.8029\nCPU times: user 1h 13min 52s, sys: 6min 18s, total: 1h 20min 10s\nWall time: 27min 59s\n"
     }
    ],
    "source": [
-    "predict_test, predict_train = model.fit_predict(timeout=1000, verbose=2)"
+    "%%time\n",
+    "predict_test, predict_train = model.fit_predict(timeout=2000, verbose=2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-05-07T01:11:28.827682Z",
@@ -224,10 +180,10 @@
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "array([0.47702889, 0.58550138, 0.67426957, 0.30171942, 0.10358626])"
+      "text/plain": "array([0.42217891, 0.48217917, 0.5430897 , 0.34699358, 0.2460748 ])"
      },
      "metadata": {},
-     "execution_count": 11
+     "execution_count": 7
     }
    ],
    "source": [
@@ -236,36 +192,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
-     "text": "Test AUC:0.7976\n"
+     "text": "Test AUC:0.7962\n"
     }
    ],
    "source": [
     "print('Test AUC: ', round(sklearn.metrics.roc_auc_score(y_test, predict_test),4))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": "     score_opt  model_score  score_std model_name  \\\n9       0.8030       0.8365   0.033468   CatBoost   \n94      0.8009       0.8311   0.030243   CatBoost   \n64      0.7871       0.8333   0.046219   CatBoost   \n85      0.7801       0.8173   0.037194   CatBoost   \n110     0.7704       0.8117   0.041280   CatBoost   \n\n                                           model_param  \\\n9    {'verbose': 0, 'early_stopping_rounds': 50, 't...   \n94   {'verbose': 0, 'early_stopping_rounds': 50, 't...   \n64   {'verbose': 0, 'early_stopping_rounds': 50, 't...   \n85   {'verbose': 0, 'early_stopping_rounds': 50, 't...   \n110  {'verbose': 0, 'early_stopping_rounds': 50, 't...   \n\n                                        wrapper_params     cat_encoder  \\\n9    {'need_norm_data': False, 'early_stopping': True}  HashingEncoder   \n94   {'need_norm_data': False, 'early_stopping': True}  HashingEncoder   \n64   {'need_norm_data': False, 'early_stopping': True}  HashingEncoder   \n85   {'need_norm_data': False, 'early_stopping': True}  HashingEncoder   \n110  {'need_norm_data': False, 'early_stopping': True}  HashingEncoder   \n\n        target_encoder  \n9    JamesSteinEncoder  \n94   JamesSteinEncoder  \n64   JamesSteinEncoder  \n85   JamesSteinEncoder  \n110  JamesSteinEncoder  ",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>score_opt</th>\n      <th>model_score</th>\n      <th>score_std</th>\n      <th>model_name</th>\n      <th>model_param</th>\n      <th>wrapper_params</th>\n      <th>cat_encoder</th>\n      <th>target_encoder</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>9</th>\n      <td>0.8030</td>\n      <td>0.8365</td>\n      <td>0.033468</td>\n      <td>CatBoost</td>\n      <td>{'verbose': 0, 'early_stopping_rounds': 50, 't...</td>\n      <td>{'need_norm_data': False, 'early_stopping': True}</td>\n      <td>HashingEncoder</td>\n      <td>JamesSteinEncoder</td>\n    </tr>\n    <tr>\n      <th>94</th>\n      <td>0.8009</td>\n      <td>0.8311</td>\n      <td>0.030243</td>\n      <td>CatBoost</td>\n      <td>{'verbose': 0, 'early_stopping_rounds': 50, 't...</td>\n      <td>{'need_norm_data': False, 'early_stopping': True}</td>\n      <td>HashingEncoder</td>\n      <td>JamesSteinEncoder</td>\n    </tr>\n    <tr>\n      <th>64</th>\n      <td>0.7871</td>\n      <td>0.8333</td>\n      <td>0.046219</td>\n      <td>CatBoost</td>\n      <td>{'verbose': 0, 'early_stopping_rounds': 50, 't...</td>\n      <td>{'need_norm_data': False, 'early_stopping': True}</td>\n      <td>HashingEncoder</td>\n      <td>JamesSteinEncoder</td>\n    </tr>\n    <tr>\n      <th>85</th>\n      <td>0.7801</td>\n      <td>0.8173</td>\n      <td>0.037194</td>\n      <td>CatBoost</td>\n      <td>{'verbose': 0, 'early_stopping_rounds': 50, 't...</td>\n      <td>{'need_norm_data': False, 'early_stopping': True}</td>\n      <td>HashingEncoder</td>\n      <td>JamesSteinEncoder</td>\n    </tr>\n    <tr>\n      <th>110</th>\n      <td>0.7704</td>\n      <td>0.8117</td>\n      <td>0.041280</td>\n      <td>CatBoost</td>\n      <td>{'verbose': 0, 'early_stopping_rounds': 50, 't...</td>\n      <td>{'need_norm_data': False, 'early_stopping': True}</td>\n      <td>HashingEncoder</td>\n      <td>JamesSteinEncoder</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
-     },
-     "metadata": {},
-     "execution_count": 15
-    }
-   ],
-   "source": [
-    "model.stack_models_trails.head(5)"
    ]
   },
   {
