--- a/examples/01_Quick_Start.ipynb
+++ b/examples/01_Quick_Start.ipynb
@@ -22,13 +22,14 @@
     "ExecuteTime": {
      "end_time": "2020-05-07T01:05:50.878720Z",
      "start_time": "2020-05-07T01:05:50.874642Z"
-    }
+    },
+    "tags": []
    },
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
-     "text": "0.05.15\n"
+     "text": "0.07.04\n"
     }
    ],
    "source": [
@@ -153,18 +154,19 @@
     "ExecuteTime": {
      "end_time": "2020-05-06T17:01:04.947762Z",
      "start_time": "2020-05-06T16:47:23.396089Z"
-    }
+    },
+    "tags": []
    },
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
-     "text": "\n Opt StackingModels\nOne iteration takes ~ 0.5 sec\nStart Auto calibration parameters\nStart optimization with the parameters:\nScore_folds =3\nOpt_lvl =3\nCold_start =87.0\nEarly_stoping =174.0\nMetric =roc_auc_score\nDirection =maximize\nDefault model roc_auc_score = 0.6891\n########################################\nOptimize: : 185it [12:28,  6.07s/it, CatBoost Best Score roc_auc_score = 0.8301 +- 0.041296]\n EarlyStopping Exceeded: Best Score: 0.7888roc_auc_score\nOptimize: : 185it [12:28,  4.05s/it, CatBoost Best Score roc_auc_score = 0.8301 +- 0.041296]\n\n Predict from StackingModels\n  0%|          | 0/25 [00:00<?, ?it/s]\n Mean Score roc_auc_score on 30 Folds: 0.7983 std: 0.050993\n  4%|▍         | 1/25 [00:47<18:48, 47.02s/it]\n Mean Score roc_auc_score on 30 Folds: 0.8013 std: 0.048718\n  8%|▊         | 2/25 [01:32<17:48, 46.44s/it]\n Mean Score roc_auc_score on 30 Folds: 0.8 std: 0.048258\n 12%|█▏        | 3/25 [01:54<14:22, 39.19s/it]\n Mean Score roc_auc_score on 30 Folds: 0.7994 std: 0.051537\n 16%|█▌        | 4/25 [02:35<13:57, 39.90s/it]\n Mean Score roc_auc_score on 30 Folds: 0.7985 std: 0.050019\n 20%|██        | 5/25 [03:19<13:39, 40.96s/it]\n Mean Score roc_auc_score on 30 Folds: 0.7988 std: 0.049318\n 24%|██▍       | 6/25 [03:41<11:11, 35.33s/it]\n Mean Score roc_auc_score on 30 Folds: 0.7932 std: 0.048022\n 28%|██▊       | 7/25 [04:28<11:38, 38.82s/it]\n Mean Score roc_auc_score on 30 Folds: 0.7936 std: 0.049869\n 32%|███▏      | 8/25 [05:12<11:27, 40.47s/it]\n Mean Score roc_auc_score on 30 Folds: 0.8048 std: 0.051475\n 36%|███▌      | 9/25 [05:52<10:41, 40.11s/it]\n Mean Score roc_auc_score on 30 Folds: 0.8008 std: 0.047599\n 40%|████      | 10/25 [06:34<10:12, 40.85s/it]\n Mean Score roc_auc_score on 30 Folds: 0.8072 std: 0.048263\n 44%|████▍     | 11/25 [06:55<08:05, 34.70s/it]\n Mean Score roc_auc_score on 30 Folds: 0.7989 std: 0.044409\n 48%|████▊     | 12/25 [07:19<06:50, 31.56s/it]\n Mean Score roc_auc_score on 30 Folds: 0.8057 std: 0.046127\n 52%|█████▏    | 13/25 [08:02<07:02, 35.19s/it]\n Mean Score roc_auc_score on 30 Folds: 0.7987 std: 0.051153\n 56%|█████▌    | 14/25 [08:46<06:55, 37.78s/it]\n Mean Score roc_auc_score on 30 Folds: 0.8 std: 0.050956\n 60%|██████    | 15/25 [09:07<05:26, 32.70s/it]\n Mean Score roc_auc_score on 30 Folds: 0.7918 std: 0.054657\n 64%|██████▍   | 16/25 [09:35<04:41, 31.28s/it]\n Mean Score roc_auc_score on 30 Folds: 0.8045 std: 0.047008\n 68%|██████▊   | 17/25 [10:00<03:55, 29.38s/it]\n Mean Score roc_auc_score on 30 Folds: 0.7973 std: 0.050509\n 72%|███████▏  | 18/25 [10:40<03:47, 32.45s/it]\n Mean Score roc_auc_score on 30 Folds: 0.8004 std: 0.04791\n 76%|███████▌  | 19/25 [11:24<03:35, 35.93s/it]\n Mean Score roc_auc_score on 30 Folds: 0.8061 std: 0.044126\n 80%|████████  | 20/25 [11:42<02:32, 30.60s/it]\n Mean Score roc_auc_score on 30 Folds: 0.7855 std: 0.047974\n 84%|████████▍ | 21/25 [13:33<03:39, 54.80s/it]\n Mean Score roc_auc_score on 30 Folds: 0.8024 std: 0.043988\n 88%|████████▊ | 22/25 [13:58<02:17, 45.84s/it]\n Mean Score roc_auc_score on 30 Folds: 0.8044 std: 0.048931\n 92%|█████████▏| 23/25 [14:24<01:19, 39.97s/it]\n Mean Score roc_auc_score on 30 Folds: 0.8079 std: 0.046511\n 96%|█████████▌| 24/25 [14:45<00:34, 34.09s/it]\n Mean Score roc_auc_score on 30 Folds: 0.7963 std: 0.049121\n100%|██████████| 25/25 [15:28<00:00, 37.13s/it]\n\n StackModels Mean roc_auc_score Score Train:0.8029\nCPU times: user 1h 13min 52s, sys: 6min 18s, total: 1h 20min 10s\nWall time: 27min 59s\n"
+     "text": "\n Opt StackingModels\nOne iteration takes ~ 0.3 sec\nStart Auto calibration parameters\nStart optimization with the parameters:\nCV_Folds =10\nScore_CV_Folds =3\nOpt_lvl =3\nCold_start =159.0\nEarly_stoping =318.0\nMetric =roc_auc_score\nDirection =maximize\nDefault model roc_auc_score = 0.649\n########################################\nOptimize: : 299it [11:43,  2.35s/it, CatBoost Best Score roc_auc_score = 0.8137 +- 0.043145]\n\n Predict from StackingModels\n  0%|          | 0/10 [00:00<?, ?it/s]\n Mean Score roc_auc_score on 30 Folds: 0.7959 std: 0.050629\n 10%|█         | 1/10 [00:27<04:10, 27.87s/it]\n Mean Score roc_auc_score on 30 Folds: 0.7881 std: 0.046341\n 20%|██        | 2/10 [01:17<04:36, 34.53s/it]\n Mean Score roc_auc_score on 30 Folds: 0.7933 std: 0.050665\n 30%|███       | 3/10 [02:15<04:50, 41.43s/it]\n Mean Score roc_auc_score on 30 Folds: 0.7914 std: 0.048463\n 40%|████      | 4/10 [03:08<04:29, 44.85s/it]\n Mean Score roc_auc_score on 30 Folds: 0.7976 std: 0.053204\n 50%|█████     | 5/10 [03:21<02:57, 35.48s/it]\n Mean Score roc_auc_score on 30 Folds: 0.7853 std: 0.050647\n 60%|██████    | 6/10 [03:48<02:11, 32.78s/it]\n Mean Score roc_auc_score on 30 Folds: 0.7933 std: 0.044434\n 70%|███████   | 7/10 [04:20<01:37, 32.58s/it]\n Mean Score roc_auc_score on 30 Folds: 0.7948 std: 0.04949\n 80%|████████  | 8/10 [04:31<00:52, 26.06s/it]\n Mean Score roc_auc_score on 30 Folds: 0.7933 std: 0.050445\n 90%|█████████ | 9/10 [04:38<00:20, 20.35s/it]\n Mean Score roc_auc_score on 30 Folds: 0.7896 std: 0.050459\n100%|██████████| 10/10 [04:48<00:00, 28.82s/it]\n\n StackModels Mean roc_auc_score Score Train:0.7969\nCPU times: user 44min 29s, sys: 6min 26s, total: 50min 55s\nWall time: 16min 32s\n"
     }
    ],
    "source": [
     "%%time\n",
-    "predict_test, predict_train = model.fit_predict(timeout=2000, verbose=2)"
+    "predict_test, predict_train = model.fit_predict(timeout=1000, verbose=2)"
    ]
   },
   {
@@ -180,7 +182,7 @@
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "array([0.42217891, 0.48217917, 0.5430897 , 0.34699358, 0.2460748 ])"
+      "text/plain": "array([0.41433388, 0.47800449, 0.54230689, 0.39425326, 0.24914714])"
      },
      "metadata": {},
      "execution_count": 7
@@ -193,16 +195,37 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
-     "text": "Test AUC:0.7962\n"
+     "text": "Test AUC:0.791\n"
     }
    ],
    "source": [
     "print('Test AUC: ', round(sklearn.metrics.roc_auc_score(y_test, predict_test),4))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": "     score_opt  model_score  score_std model_name  \\\n131     0.7663       0.8202   0.053903   CatBoost   \n263     0.7706       0.8137   0.043145   CatBoost   \n156     0.7645       0.8133   0.048850   CatBoost   \n25      0.7585       0.8085   0.050013   CatBoost   \n228     0.7396       0.8079   0.068280   CatBoost   \n12      0.7527       0.8067   0.053999   CatBoost   \n198     0.7540       0.8053   0.051257   CatBoost   \n269     0.7452       0.8051   0.059851   CatBoost   \n41      0.7392       0.8051   0.065928   CatBoost   \n34      0.7363       0.8002   0.063944   CatBoost   \n\n                                           model_param  \\\n131  {'verbose': 0, 'early_stopping_rounds': 50, 't...   \n263  {'verbose': 0, 'early_stopping_rounds': 50, 't...   \n156  {'verbose': 0, 'early_stopping_rounds': 50, 't...   \n25   {'verbose': 0, 'early_stopping_rounds': 50, 't...   \n228  {'verbose': 0, 'early_stopping_rounds': 50, 't...   \n12   {'verbose': 0, 'early_stopping_rounds': 50, 't...   \n198  {'verbose': 0, 'early_stopping_rounds': 50, 't...   \n269  {'verbose': 0, 'early_stopping_rounds': 50, 't...   \n41   {'verbose': 0, 'early_stopping_rounds': 50, 't...   \n34   {'verbose': 0, 'early_stopping_rounds': 50, 't...   \n\n               wrapper_params     cat_encoder  cv_folds  \n131  {'early_stopping': True}  HelmertEncoder        10  \n263  {'early_stopping': True}  HelmertEncoder        10  \n156  {'early_stopping': True}  HelmertEncoder        10  \n25   {'early_stopping': True}  HelmertEncoder        10  \n228  {'early_stopping': True}  HelmertEncoder        10  \n12   {'early_stopping': True}  HelmertEncoder        10  \n198  {'early_stopping': True}  HelmertEncoder        10  \n269  {'early_stopping': True}  HelmertEncoder        10  \n41   {'early_stopping': True}  HelmertEncoder        10  \n34   {'early_stopping': True}  HelmertEncoder        10  ",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>score_opt</th>\n      <th>model_score</th>\n      <th>score_std</th>\n      <th>model_name</th>\n      <th>model_param</th>\n      <th>wrapper_params</th>\n      <th>cat_encoder</th>\n      <th>cv_folds</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>131</th>\n      <td>0.7663</td>\n      <td>0.8202</td>\n      <td>0.053903</td>\n      <td>CatBoost</td>\n      <td>{'verbose': 0, 'early_stopping_rounds': 50, 't...</td>\n      <td>{'early_stopping': True}</td>\n      <td>HelmertEncoder</td>\n      <td>10</td>\n    </tr>\n    <tr>\n      <th>263</th>\n      <td>0.7706</td>\n      <td>0.8137</td>\n      <td>0.043145</td>\n      <td>CatBoost</td>\n      <td>{'verbose': 0, 'early_stopping_rounds': 50, 't...</td>\n      <td>{'early_stopping': True}</td>\n      <td>HelmertEncoder</td>\n      <td>10</td>\n    </tr>\n    <tr>\n      <th>156</th>\n      <td>0.7645</td>\n      <td>0.8133</td>\n      <td>0.048850</td>\n      <td>CatBoost</td>\n      <td>{'verbose': 0, 'early_stopping_rounds': 50, 't...</td>\n      <td>{'early_stopping': True}</td>\n      <td>HelmertEncoder</td>\n      <td>10</td>\n    </tr>\n    <tr>\n      <th>25</th>\n      <td>0.7585</td>\n      <td>0.8085</td>\n      <td>0.050013</td>\n      <td>CatBoost</td>\n      <td>{'verbose': 0, 'early_stopping_rounds': 50, 't...</td>\n      <td>{'early_stopping': True}</td>\n      <td>HelmertEncoder</td>\n      <td>10</td>\n    </tr>\n    <tr>\n      <th>228</th>\n      <td>0.7396</td>\n      <td>0.8079</td>\n      <td>0.068280</td>\n      <td>CatBoost</td>\n      <td>{'verbose': 0, 'early_stopping_rounds': 50, 't...</td>\n      <td>{'early_stopping': True}</td>\n      <td>HelmertEncoder</td>\n      <td>10</td>\n    </tr>\n    <tr>\n      <th>12</th>\n      <td>0.7527</td>\n      <td>0.8067</td>\n      <td>0.053999</td>\n      <td>CatBoost</td>\n      <td>{'verbose': 0, 'early_stopping_rounds': 50, 't...</td>\n      <td>{'early_stopping': True}</td>\n      <td>HelmertEncoder</td>\n      <td>10</td>\n    </tr>\n    <tr>\n      <th>198</th>\n      <td>0.7540</td>\n      <td>0.8053</td>\n      <td>0.051257</td>\n      <td>CatBoost</td>\n      <td>{'verbose': 0, 'early_stopping_rounds': 50, 't...</td>\n      <td>{'early_stopping': True}</td>\n      <td>HelmertEncoder</td>\n      <td>10</td>\n    </tr>\n    <tr>\n      <th>269</th>\n      <td>0.7452</td>\n      <td>0.8051</td>\n      <td>0.059851</td>\n      <td>CatBoost</td>\n      <td>{'verbose': 0, 'early_stopping_rounds': 50, 't...</td>\n      <td>{'early_stopping': True}</td>\n      <td>HelmertEncoder</td>\n      <td>10</td>\n    </tr>\n    <tr>\n      <th>41</th>\n      <td>0.7392</td>\n      <td>0.8051</td>\n      <td>0.065928</td>\n      <td>CatBoost</td>\n      <td>{'verbose': 0, 'early_stopping_rounds': 50, 't...</td>\n      <td>{'early_stopping': True}</td>\n      <td>HelmertEncoder</td>\n      <td>10</td>\n    </tr>\n    <tr>\n      <th>34</th>\n      <td>0.7363</td>\n      <td>0.8002</td>\n      <td>0.063944</td>\n      <td>CatBoost</td>\n      <td>{'verbose': 0, 'early_stopping_rounds': 50, 't...</td>\n      <td>{'early_stopping': True}</td>\n      <td>HelmertEncoder</td>\n      <td>10</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "metadata": {},
+     "execution_count": 12
+    }
+   ],
+   "source": [
+    "model.stack_models_cfgs"
    ]
   },
   {
@@ -229,7 +252,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4-final"
+   "version": "3.8.3-final"
   },
   "toc": {
    "base_numbering": 1,
