--- a/02_Models.ipynb
+++ b/02_Models.ipynb
@@ -17,9 +17,9 @@
       },
       "source": [
         "# If you run this notebook on Google Colaboratory, uncomment the below to install automl_alex.\n",
-        "#!pip install automl-alex"
+        "#!pip install -U automl-alex"
       ],
-      "execution_count": 1,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -46,7 +46,7 @@
         "import automl_alex\n",
         "print(automl_alex.__version__)"
       ],
-      "execution_count": 1,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -69,7 +69,7 @@
       "source": [
         "RANDOM_SEED = 42"
       ],
-      "execution_count": 2,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -117,7 +117,7 @@
         "\n",
         "X_train.shape, X_test.shape"
       ],
-      "execution_count": 3,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -125,7 +125,7 @@
             "text/plain": "((430, 13), (76, 13))"
           },
           "metadata": {},
-          "execution_count": 3
+          "execution_count": 4
         }
       ]
     },
@@ -158,7 +158,7 @@
         "# Libraries are currently available:\n",
         "automl_alex.models.all_models"
       ],
-      "execution_count": 4,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -166,7 +166,7 @@
             "text/plain": "{'LightGBM': automl_alex.models.model_lightgbm.LightGBM,\n 'KNeighbors': automl_alex.models.sklearn_models.KNeighbors,\n 'LinearSVM': automl_alex.models.sklearn_models.LinearSVM,\n 'LinearModel': automl_alex.models.sklearn_models.LinearModel,\n 'SGD': automl_alex.models.sklearn_models.SGD,\n 'RandomForest': automl_alex.models.sklearn_models.RandomForest,\n 'ExtraTrees': automl_alex.models.sklearn_models.ExtraTrees,\n 'XGBoost': automl_alex.models.model_xgboost.XGBoost,\n 'CatBoost': automl_alex.models.model_catboost.CatBoost}"
           },
           "metadata": {},
-          "execution_count": 4
+          "execution_count": 5
         }
       ]
     },
@@ -200,7 +200,7 @@
         "# or Simply\n",
         "model = LightGBMRegressor(X_train, y_train, X_test, random_state=RANDOM_SEED)"
       ],
-      "execution_count": 5,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -224,27 +224,27 @@
         "config = model.fit()\n",
         "config"
       ],
-      "execution_count": 6,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
-          "text": "\n Mean Score mean_squared_error on 5 Folds: 9.4983 std: 3.807391\n"
+          "text": "\n Mean Score mean_squared_error on 5 Folds: 9.4494 std: 3.690342\n"
         },
         {
           "output_type": "execute_result",
           "data": {
-            "text/plain": "   score_opt  model_score  score_std model_name  \\\n0  13.305691       9.4983   3.807391   LightGBM   \n\n                                         model_param  \\\n0  {'random_seed': 42, 'early_stopping_rounds': 5...   \n\n              wrapper_params  \\\n0  {'early_stopping': False}   \n\n                                         cat_encoder  \\\n0  [HelmertEncoder, HashingEncoder, FrequencyEnco...   \n\n                                             columns  cv_folds  \n0  [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 0_/...        10  ",
-            "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>score_opt</th>\n      <th>model_score</th>\n      <th>score_std</th>\n      <th>model_name</th>\n      <th>model_param</th>\n      <th>wrapper_params</th>\n      <th>cat_encoder</th>\n      <th>columns</th>\n      <th>cv_folds</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>13.305691</td>\n      <td>9.4983</td>\n      <td>3.807391</td>\n      <td>LightGBM</td>\n      <td>{'random_seed': 42, 'early_stopping_rounds': 5...</td>\n      <td>{'early_stopping': False}</td>\n      <td>[HelmertEncoder, HashingEncoder, FrequencyEnco...</td>\n      <td>[0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 0_/...</td>\n      <td>10</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+            "text/plain": "   score_opt  model_score  score_std model_name  \\\n0  13.139742       9.4494   3.690342   LightGBM   \n\n                                         model_param  \\\n0  {'random_seed': 42, 'early_stopping_rounds': 5...   \n\n              wrapper_params  \\\n0  {'early_stopping': False}   \n\n                                         cat_encoder  \\\n0  [OneHotEncoder, HelmertEncoder, HashingEncoder...   \n\n                                             columns  cv_folds  \n0  [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, Fre...        10  ",
+            "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>score_opt</th>\n      <th>model_score</th>\n      <th>score_std</th>\n      <th>model_name</th>\n      <th>model_param</th>\n      <th>wrapper_params</th>\n      <th>cat_encoder</th>\n      <th>columns</th>\n      <th>cv_folds</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>13.139742</td>\n      <td>9.4494</td>\n      <td>3.690342</td>\n      <td>LightGBM</td>\n      <td>{'random_seed': 42, 'early_stopping_rounds': 5...</td>\n      <td>{'early_stopping': False}</td>\n      <td>[OneHotEncoder, HelmertEncoder, HashingEncoder...</td>\n      <td>[0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, Fre...</td>\n      <td>10</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
           },
           "metadata": {},
-          "execution_count": 6
+          "execution_count": 7
         }
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 8,
       "metadata": {
         "tags": []
       },
@@ -252,16 +252,16 @@
         {
           "output_type": "stream",
           "name": "stderr",
-          "text": "100%|██████████| 1/1 [00:38<00:00, 38.68s/it]\n Mean Score mean_squared_error on 30 Folds: 11.4645 std: 6.871389\n\n"
+          "text": "100%|██████████| 1/1 [00:18<00:00, 18.34s/it]\n Mean Score mean_squared_error on 30 Folds: 11.4179 std: 6.930417\n\n"
         },
         {
           "output_type": "execute_result",
           "data": {
-            "text/plain": "   model_name                                       predict_test  \\\n0  0_LightGBM  [25.472476405788335, 32.403280552795486, 14.96...   \n\n                                       predict_train  \n0  [20.278928680282963, 47.61592829929961, 10.321...  ",
-            "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>model_name</th>\n      <th>predict_test</th>\n      <th>predict_train</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>0_LightGBM</td>\n      <td>[25.472476405788335, 32.403280552795486, 14.96...</td>\n      <td>[20.278928680282963, 47.61592829929961, 10.321...</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+            "text/plain": "   model_name                                       predict_test  \\\n0  0_LightGBM  [25.551237846051972, 32.636579791987046, 15.04...   \n\n                                       predict_train  \n0  [20.24104786640146, 47.509489796906195, 9.8753...  ",
+            "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>model_name</th>\n      <th>predict_test</th>\n      <th>predict_train</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>0_LightGBM</td>\n      <td>[25.551237846051972, 32.636579791987046, 15.04...</td>\n      <td>[20.24104786640146, 47.509489796906195, 9.8753...</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
           },
           "metadata": {},
-          "execution_count": 7
+          "execution_count": 8
         }
       ],
       "source": [
@@ -288,18 +288,18 @@
       "source": [
         "print('Test MSE: ', sklearn.metrics.mean_squared_error(y_test, predicts['predict_test'][0]))"
       ],
-      "execution_count": 8,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
-          "text": "Test MSE:  6.511734843780581\n"
+          "text": "Test MSE:  6.547596226031442\n"
         }
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 10,
       "metadata": {
         "tags": []
       },
@@ -307,7 +307,7 @@
         {
           "output_type": "stream",
           "name": "stderr",
-          "text": "100%|██████████| 1/1 [00:51<00:00, 51.32s/it]\n Mean Score mean_squared_error on 50 Folds: 11.4056 std: 6.749747\nTest MSE:  6.593337057064993\n\n"
+          "text": "100%|██████████| 1/1 [00:30<00:00, 30.67s/it]\n Mean Score mean_squared_error on 50 Folds: 11.3527 std: 6.737989\nTest MSE:  6.641980331883427\n\n"
         }
       ],
       "source": [
