--- a/02_Models_test.ipynb
+++ b/02_Models_test.ipynb
@@ -17,7 +17,7 @@
       },
       "source": [
         "# If you run this notebook on Google Colaboratory, uncomment the below to install automl_alex.\n",
-        "#!pip install automl-alex"
+        "#!pip install -U automl-alex"
       ],
       "execution_count": 1,
       "outputs": []
