--- a/02_Models.ipynb
+++ b/02_Models.ipynb
@@ -19,7 +19,7 @@
         "# If you run this notebook on Google Colaboratory, uncomment the below to install automl_alex.\n",
         "#!pip install -U automl-alex"
       ],
-      "execution_count": 2,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -46,12 +46,12 @@
         "import automl_alex\n",
         "print(automl_alex.__version__)"
       ],
-      "execution_count": 3,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
-          "text": "0.07.18\n"
+          "text": "0.07.26.1\n"
         }
       ]
     },
@@ -69,7 +69,7 @@
       "source": [
         "RANDOM_SEED = 42"
       ],
-      "execution_count": 1,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -163,7 +163,7 @@
         {
           "output_type": "execute_result",
           "data": {
-            "text/plain": "{'LightGBM': automl_alex.models.model_lightgbm.LightGBM,\n 'KNeighbors': automl_alex.models.sklearn_models.KNeighbors,\n 'LinearSVM': automl_alex.models.sklearn_models.LinearSVM,\n 'LinearModel': automl_alex.models.sklearn_models.LinearModel,\n 'SGD': automl_alex.models.sklearn_models.SGD,\n 'RandomForest': automl_alex.models.sklearn_models.RandomForest,\n 'ExtraTrees': automl_alex.models.sklearn_models.ExtraTrees,\n 'XGBoost': automl_alex.models.model_xgboost.XGBoost,\n 'CatBoost': automl_alex.models.model_catboost.CatBoost}"
+            "text/plain": "{'LightGBM': automl_alex.models.model_lightgbm.LightGBM,\n 'KNeighbors': automl_alex.models.sklearn_models.KNeighbors,\n 'LinearSVM': automl_alex.models.sklearn_models.LinearSVM,\n 'LinearModel': automl_alex.models.sklearn_models.LinearModel,\n 'SGD': automl_alex.models.sklearn_models.SGD,\n 'RandomForest': automl_alex.models.sklearn_models.RandomForest,\n 'ExtraTrees': automl_alex.models.sklearn_models.ExtraTrees,\n 'XGBoost': automl_alex.models.model_xgboost.XGBoost,\n 'CatBoost': automl_alex.models.model_catboost.CatBoost,\n 'MLP': automl_alex.models.sklearn_models.MLP}"
           },
           "metadata": {},
           "execution_count": 5
@@ -205,46 +205,25 @@
     },
     {
       "cell_type": "code",
-      "metadata": {
-        "ExecuteTime": {
-          "end_time": "2020-05-07T08:40:48.905014Z",
-          "start_time": "2020-05-07T08:40:48.148436Z"
-        },
-        "id": "A5PK92UMbV5S",
-        "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        },
-        "outputId": "9265396c-8c86-48fb-c7fc-00f2e8d5e6dc",
-        "tags": []
-      },
-      "source": [
-        "# fit with default model parameters\n",
-        "config = model.fit()\n",
-        "config"
-      ],
       "execution_count": 7,
+      "metadata": {},
       "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": "\n Mean Score mean_squared_error on 5 Folds: 9.4494 std: 3.690342\n"
-        },
         {
           "output_type": "execute_result",
           "data": {
-            "text/plain": "   score_opt  model_score  score_std model_name  \\\n0  13.139742       9.4494   3.690342   LightGBM   \n\n                                         model_param  \\\n0  {'random_seed': 42, 'early_stopping_rounds': 5...   \n\n              wrapper_params  \\\n0  {'early_stopping': False}   \n\n                                         cat_encoder  \\\n0  [OneHotEncoder, HelmertEncoder, HashingEncoder...   \n\n                                             columns  cv_folds  \n0  [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, Fre...        10  ",
-            "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>score_opt</th>\n      <th>model_score</th>\n      <th>score_std</th>\n      <th>model_name</th>\n      <th>model_param</th>\n      <th>wrapper_params</th>\n      <th>cat_encoder</th>\n      <th>columns</th>\n      <th>cv_folds</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>13.139742</td>\n      <td>9.4494</td>\n      <td>3.690342</td>\n      <td>LightGBM</td>\n      <td>{'random_seed': 42, 'early_stopping_rounds': 5...</td>\n      <td>{'early_stopping': False}</td>\n      <td>[OneHotEncoder, HelmertEncoder, HashingEncoder...</td>\n      <td>[0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, Fre...</td>\n      <td>10</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+            "text/plain": "{'random_seed': 42,\n 'early_stopping_rounds': 50,\n 'num_iterations': 200,\n 'verbose': -1,\n 'device_type': 'cpu'}"
           },
           "metadata": {},
           "execution_count": 7
         }
+      ],
+      "source": [
+        "model.model_param"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 9,
       "metadata": {
         "tags": []
       },
@@ -252,20 +231,20 @@
         {
           "output_type": "stream",
           "name": "stderr",
-          "text": "100%|██████████| 1/1 [00:18<00:00, 18.34s/it]\n Mean Score mean_squared_error on 30 Folds: 11.4179 std: 6.930417\n\n"
+          "text": "0%|          | 0/1 [00:00<?, ?it/s]\n Mean Score mean_squared_error on 20 Folds: 10.8665 std: 5.269591\n100%|██████████| 1/1 [00:21<00:00, 21.74s/it]\n"
         },
         {
           "output_type": "execute_result",
           "data": {
-            "text/plain": "   model_name                                       predict_test  \\\n0  0_LightGBM  [25.551237846051972, 32.636579791987046, 15.04...   \n\n                                       predict_train  \n0  [20.24104786640146, 47.509489796906195, 9.8753...  ",
-            "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>model_name</th>\n      <th>predict_test</th>\n      <th>predict_train</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>0_LightGBM</td>\n      <td>[25.551237846051972, 32.636579791987046, 15.04...</td>\n      <td>[20.24104786640146, 47.509489796906195, 9.8753...</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+            "text/plain": "   model_name                                       predict_test  \\\n0  0_LightGBM  [25.624219445377463, 32.65324971423799, 15.085...   \n\n                                       predict_train  \n0  [20.21678999475246, 47.5198209009377, 9.199600...  ",
+            "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>model_name</th>\n      <th>predict_test</th>\n      <th>predict_train</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>0_LightGBM</td>\n      <td>[25.624219445377463, 32.65324971423799, 15.085...</td>\n      <td>[20.21678999475246, 47.5198209009377, 9.199600...</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
           },
           "metadata": {},
-          "execution_count": 8
+          "execution_count": 9
         }
       ],
       "source": [
-        "predicts = model.predict(models_cfgs=config)\n",
+        "predicts = model.predict()\n",
         "predicts"
       ]
     },
@@ -288,18 +267,18 @@
       "source": [
         "print('Test MSE: ', sklearn.metrics.mean_squared_error(y_test, predicts['predict_test'][0]))"
       ],
-      "execution_count": 9,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
-          "text": "Test MSE:  6.547596226031442\n"
+          "text": "Test MSE:6.5977882213630155\n"
         }
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 11,
       "metadata": {
         "tags": []
       },
@@ -307,7 +286,7 @@
         {
           "output_type": "stream",
           "name": "stderr",
-          "text": "100%|██████████| 1/1 [00:30<00:00, 30.67s/it]\n Mean Score mean_squared_error on 50 Folds: 11.3527 std: 6.737989\nTest MSE:  6.641980331883427\n\n"
+          "text": "0%|          | 0/1 [00:00<?, ?it/s]\n Mean Score mean_squared_error on 50 Folds: 11.3527 std: 6.737989\n100%|██████████| 1/1 [01:06<00:00, 66.59s/it]\nTest MSE:6.641980331883427\n"
         }
       ],
       "source": [
@@ -1268,9 +1247,9 @@
   ],
   "metadata": {
     "kernelspec": {
-      "display_name": "Python 3.8.3 64-bit ('ds': conda)",
+      "display_name": "Python 3.7.6 64-bit ('ds': conda)",
       "language": "python",
-      "name": "python38364bitdscondadc8f49c0681c4f8d9aaeec09a1cf65fe"
+      "name": "python37664bitdscondaeb5aeb426ade4b82a5cf907714e87c5f"
     },
     "language_info": {
       "codemirror_mode": {
@@ -1282,7 +1261,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.8.3-final"
+      "version": "3.7.7-final"
     },
     "toc": {
       "base_numbering": 1,
