--- a/02_Models.ipynb
+++ b/02_Models.ipynb
@@ -19,7 +19,7 @@
         "# If you run this notebook on Google Colaboratory, uncomment the below to install automl_alex.\n",
         "#!pip install -U -q automl-alex"
       ],
-      "execution_count": 1,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -46,13 +46,13 @@
         "import automl_alex\n",
         "print(automl_alex.__version__)"
       ],
-      "execution_count": 1,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "0.11.24\n"
+            "1.02.15\n"
           ]
         }
       ]
@@ -71,7 +71,7 @@
       "source": [
         "RANDOM_SEED = 42"
       ],
-      "execution_count": 2,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -119,7 +119,7 @@
         "\n",
         "X_train.shape, X_test.shape"
       ],
-      "execution_count": 3,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -129,8 +129,55 @@
             ]
           },
           "metadata": {},
-          "execution_count": 3
+          "execution_count": 5
         }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 6,
+      "metadata": {},
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "           0     1      2    3       4      5     6       7     8      9   \\\n",
+              "104   0.13960   0.0   8.56  0.0  0.5200  6.167  90.0  2.4210   5.0  384.0   \n",
+              "203   0.03510  95.0   2.68  0.0  0.4161  7.853  33.2  5.1180   4.0  224.0   \n",
+              "381  15.87440   0.0  18.10  0.0  0.6710  6.545  99.1  1.5192  24.0  666.0   \n",
+              "489   0.18337   0.0  27.74  0.0  0.6090  5.414  98.3  1.7554   4.0  711.0   \n",
+              "69    0.12816  12.5   6.07  0.0  0.4090  5.885  33.0  6.4980   4.0  345.0   \n",
+              "..        ...   ...    ...  ...     ...    ...   ...     ...   ...    ...   \n",
+              "106   0.17120   0.0   8.56  0.0  0.5200  5.836  91.9  2.2110   5.0  384.0   \n",
+              "270   0.29916  20.0   6.96  0.0  0.4640  5.856  42.1  4.4290   3.0  223.0   \n",
+              "348   0.01501  80.0   2.01  0.0  0.4350  6.635  29.7  8.3440   4.0  280.0   \n",
+              "435  11.16040   0.0  18.10  0.0  0.7400  6.629  94.6  2.1247  24.0  666.0   \n",
+              "102   0.22876   0.0   8.56  0.0  0.5200  6.405  85.4  2.7147   5.0  384.0   \n",
+              "\n",
+              "       10      11     12  \n",
+              "104  20.9  392.69  12.33  \n",
+              "203  14.7  392.78   3.81  \n",
+              "381  20.2  396.90  21.08  \n",
+              "489  20.1  344.05  23.97  \n",
+              "69   18.9  396.90   8.79  \n",
+              "..    ...     ...    ...  \n",
+              "106  20.9  395.67  18.66  \n",
+              "270  18.6  388.65  13.00  \n",
+              "348  17.0  390.94   5.99  \n",
+              "435  20.2  109.85  23.27  \n",
+              "102  20.9   70.80  10.63  \n",
+              "\n",
+              "[430 rows x 13 columns]"
+            ],
+            "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>0</th>\n      <th>1</th>\n      <th>2</th>\n      <th>3</th>\n      <th>4</th>\n      <th>5</th>\n      <th>6</th>\n      <th>7</th>\n      <th>8</th>\n      <th>9</th>\n      <th>10</th>\n      <th>11</th>\n      <th>12</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>104</th>\n      <td>0.13960</td>\n      <td>0.0</td>\n      <td>8.56</td>\n      <td>0.0</td>\n      <td>0.5200</td>\n      <td>6.167</td>\n      <td>90.0</td>\n      <td>2.4210</td>\n      <td>5.0</td>\n      <td>384.0</td>\n      <td>20.9</td>\n      <td>392.69</td>\n      <td>12.33</td>\n    </tr>\n    <tr>\n      <th>203</th>\n      <td>0.03510</td>\n      <td>95.0</td>\n      <td>2.68</td>\n      <td>0.0</td>\n      <td>0.4161</td>\n      <td>7.853</td>\n      <td>33.2</td>\n      <td>5.1180</td>\n      <td>4.0</td>\n      <td>224.0</td>\n      <td>14.7</td>\n      <td>392.78</td>\n      <td>3.81</td>\n    </tr>\n    <tr>\n      <th>381</th>\n      <td>15.87440</td>\n      <td>0.0</td>\n      <td>18.10</td>\n      <td>0.0</td>\n      <td>0.6710</td>\n      <td>6.545</td>\n      <td>99.1</td>\n      <td>1.5192</td>\n      <td>24.0</td>\n      <td>666.0</td>\n      <td>20.2</td>\n      <td>396.90</td>\n      <td>21.08</td>\n    </tr>\n    <tr>\n      <th>489</th>\n      <td>0.18337</td>\n      <td>0.0</td>\n      <td>27.74</td>\n      <td>0.0</td>\n      <td>0.6090</td>\n      <td>5.414</td>\n      <td>98.3</td>\n      <td>1.7554</td>\n      <td>4.0</td>\n      <td>711.0</td>\n      <td>20.1</td>\n      <td>344.05</td>\n      <td>23.97</td>\n    </tr>\n    <tr>\n      <th>69</th>\n      <td>0.12816</td>\n      <td>12.5</td>\n      <td>6.07</td>\n      <td>0.0</td>\n      <td>0.4090</td>\n      <td>5.885</td>\n      <td>33.0</td>\n      <td>6.4980</td>\n      <td>4.0</td>\n      <td>345.0</td>\n      <td>18.9</td>\n      <td>396.90</td>\n      <td>8.79</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>106</th>\n      <td>0.17120</td>\n      <td>0.0</td>\n      <td>8.56</td>\n      <td>0.0</td>\n      <td>0.5200</td>\n      <td>5.836</td>\n      <td>91.9</td>\n      <td>2.2110</td>\n      <td>5.0</td>\n      <td>384.0</td>\n      <td>20.9</td>\n      <td>395.67</td>\n      <td>18.66</td>\n    </tr>\n    <tr>\n      <th>270</th>\n      <td>0.29916</td>\n      <td>20.0</td>\n      <td>6.96</td>\n      <td>0.0</td>\n      <td>0.4640</td>\n      <td>5.856</td>\n      <td>42.1</td>\n      <td>4.4290</td>\n      <td>3.0</td>\n      <td>223.0</td>\n      <td>18.6</td>\n      <td>388.65</td>\n      <td>13.00</td>\n    </tr>\n    <tr>\n      <th>348</th>\n      <td>0.01501</td>\n      <td>80.0</td>\n      <td>2.01</td>\n      <td>0.0</td>\n      <td>0.4350</td>\n      <td>6.635</td>\n      <td>29.7</td>\n      <td>8.3440</td>\n      <td>4.0</td>\n      <td>280.0</td>\n      <td>17.0</td>\n      <td>390.94</td>\n      <td>5.99</td>\n    </tr>\n    <tr>\n      <th>435</th>\n      <td>11.16040</td>\n      <td>0.0</td>\n      <td>18.10</td>\n      <td>0.0</td>\n      <td>0.7400</td>\n      <td>6.629</td>\n      <td>94.6</td>\n      <td>2.1247</td>\n      <td>24.0</td>\n      <td>666.0</td>\n      <td>20.2</td>\n      <td>109.85</td>\n      <td>23.27</td>\n    </tr>\n    <tr>\n      <th>102</th>\n      <td>0.22876</td>\n      <td>0.0</td>\n      <td>8.56</td>\n      <td>0.0</td>\n      <td>0.5200</td>\n      <td>6.405</td>\n      <td>85.4</td>\n      <td>2.7147</td>\n      <td>5.0</td>\n      <td>384.0</td>\n      <td>20.9</td>\n      <td>70.80</td>\n      <td>10.63</td>\n    </tr>\n  </tbody>\n</table>\n<p>430 rows × 13 columns</p>\n</div>"
+          },
+          "metadata": {},
+          "execution_count": 6
+        }
+      ],
+      "source": [
+        "X_train"
       ]
     },
     {
@@ -162,7 +209,7 @@
         "# Libraries are currently available:\n",
         "automl_alex.models.all_models"
       ],
-      "execution_count": 4,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -181,7 +228,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 4
+          "execution_count": 7
         }
       ]
     },
@@ -217,6 +264,13 @@
       ],
       "execution_count": 5,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": []
     },
     {
       "cell_type": "code",
@@ -1511,12 +1565,8 @@
   "metadata": {
     "kernelspec": {
       "name": "python3",
-      "display_name": "Python 3.8.6 64-bit",
-      "metadata": {
-        "interpreter": {
-          "hash": "4cd7ab41f5fca4b9b44701077e38c5ffd31fe66a6cab21e0214b68d958d0e462"
-        }
-      }
+      "display_name": "Python 3",
+      "language": "python"
     },
     "language_info": {
       "codemirror_mode": {
@@ -1528,7 +1578,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.8.6-final"
+      "version": "3.8.5-final"
     },
     "toc": {
       "base_numbering": 1,
