--- a/examples/04_ModelsReview.ipynb
+++ b/examples/04_ModelsReview.ipynb
@@ -32,6 +32,9 @@
       "source": [
         "import pandas as pd\n",
         "import sklearn\n",
+        "from sklearn.model_selection import train_test_split\n",
+        "from sklearn.datasets import fetch_openml\n",
+        "\n",
         "import automl_alex\n",
         "from automl_alex import ModelsReview, ModelsReviewClassifier, DataPrepare"
       ],
@@ -111,13 +114,44 @@
         "outputId": "37007c24-8007-4207-f8b1-aa5b4f027698"
       },
       "source": [
-        "from sklearn.datasets import fetch_openml\n",
-        "from sklearn.model_selection import train_test_split\n",
-        "dataset = fetch_openml(name='credit-g', version=1, as_frame=True)\n",
-        "dataset.target = dataset.target.astype('category').cat.codes"
+        "# https://www.openml.org/d/179\n",
+        "dataset = fetch_openml(data_id=179, as_frame=True)\n",
+        "dataset.target = dataset.target.astype('category').cat.codes\n",
+        "dataset.data.head(5)"
       ],
       "execution_count": 4,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "  age         workclass    fnlwgt  education  education-num  \\\n",
+              "0   2         State-gov   77516.0  Bachelors           13.0   \n",
+              "1   3  Self-emp-not-inc   83311.0  Bachelors           13.0   \n",
+              "2   2           Private  215646.0    HS-grad            9.0   \n",
+              "3   3           Private  234721.0       11th            7.0   \n",
+              "4   1           Private  338409.0  Bachelors           13.0   \n",
+              "\n",
+              "       marital-status         occupation   relationship   race     sex  \\\n",
+              "0       Never-married       Adm-clerical  Not-in-family  White    Male   \n",
+              "1  Married-civ-spouse    Exec-managerial        Husband  White    Male   \n",
+              "2            Divorced  Handlers-cleaners  Not-in-family  White    Male   \n",
+              "3  Married-civ-spouse  Handlers-cleaners        Husband  Black    Male   \n",
+              "4  Married-civ-spouse     Prof-specialty           Wife  Black  Female   \n",
+              "\n",
+              "  capitalgain capitalloss hoursperweek native-country  \n",
+              "0           1           0            2  United-States  \n",
+              "1           0           0            0  United-States  \n",
+              "2           0           0            2  United-States  \n",
+              "3           0           0            2  United-States  \n",
+              "4           0           0            2           Cuba  "
+            ],
+            "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>age</th>\n      <th>workclass</th>\n      <th>fnlwgt</th>\n      <th>education</th>\n      <th>education-num</th>\n      <th>marital-status</th>\n      <th>occupation</th>\n      <th>relationship</th>\n      <th>race</th>\n      <th>sex</th>\n      <th>capitalgain</th>\n      <th>capitalloss</th>\n      <th>hoursperweek</th>\n      <th>native-country</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>2</td>\n      <td>State-gov</td>\n      <td>77516.0</td>\n      <td>Bachelors</td>\n      <td>13.0</td>\n      <td>Never-married</td>\n      <td>Adm-clerical</td>\n      <td>Not-in-family</td>\n      <td>White</td>\n      <td>Male</td>\n      <td>1</td>\n      <td>0</td>\n      <td>2</td>\n      <td>United-States</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>3</td>\n      <td>Self-emp-not-inc</td>\n      <td>83311.0</td>\n      <td>Bachelors</td>\n      <td>13.0</td>\n      <td>Married-civ-spouse</td>\n      <td>Exec-managerial</td>\n      <td>Husband</td>\n      <td>White</td>\n      <td>Male</td>\n      <td>0</td>\n      <td>0</td>\n      <td>0</td>\n      <td>United-States</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>2</td>\n      <td>Private</td>\n      <td>215646.0</td>\n      <td>HS-grad</td>\n      <td>9.0</td>\n      <td>Divorced</td>\n      <td>Handlers-cleaners</td>\n      <td>Not-in-family</td>\n      <td>White</td>\n      <td>Male</td>\n      <td>0</td>\n      <td>0</td>\n      <td>2</td>\n      <td>United-States</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>3</td>\n      <td>Private</td>\n      <td>234721.0</td>\n      <td>11th</td>\n      <td>7.0</td>\n      <td>Married-civ-spouse</td>\n      <td>Handlers-cleaners</td>\n      <td>Husband</td>\n      <td>Black</td>\n      <td>Male</td>\n      <td>0</td>\n      <td>0</td>\n      <td>2</td>\n      <td>United-States</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>1</td>\n      <td>Private</td>\n      <td>338409.0</td>\n      <td>Bachelors</td>\n      <td>13.0</td>\n      <td>Married-civ-spouse</td>\n      <td>Prof-specialty</td>\n      <td>Wife</td>\n      <td>Black</td>\n      <td>Female</td>\n      <td>0</td>\n      <td>0</td>\n      <td>2</td>\n      <td>Cuba</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+          },
+          "metadata": {},
+          "execution_count": 4
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -147,7 +181,7 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "((750, 20), (250, 20))"
+              "((36631, 14), (12211, 14))"
             ]
           },
           "metadata": {},
@@ -164,7 +198,7 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "((750, 72), (250, 72))"
+              "((36631, 154), (12211, 154))"
             ]
           },
           "metadata": {},
@@ -213,7 +247,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 8,
       "metadata": {
         "tags": []
       },
@@ -222,7 +256,7 @@
           "output_type": "stream",
           "name": "stderr",
           "text": [
-            "100%|██████████| 9/9 [00:03<00:00,  2.26it/s]\n"
+            "100%|██████████| 9/9 [04:25<00:00, 29.49s/it]\n"
           ]
         }
       ],
@@ -238,7 +272,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 9,
       "metadata": {},
       "outputs": [
         {
@@ -246,20 +280,20 @@
           "data": {
             "text/plain": [
               "     Model_Name   Score  Time_Fit_Sec\n",
-              "0      LightGBM  0.7906          0.52\n",
-              "1    KNeighbors  0.6894          0.03\n",
-              "2   LinearModel  0.7991          0.03\n",
-              "3           SGD  0.6557          0.03\n",
-              "4  RandomForest  0.7847          0.34\n",
-              "5    ExtraTrees  0.7690          0.25\n",
-              "6       XGBoost  0.6742          0.45\n",
-              "7      CatBoost  0.8024          2.01\n",
-              "8           MLP  0.7538          0.30"
+              "0      LightGBM  0.9088        129.46\n",
+              "1    KNeighbors  0.8476         41.37\n",
+              "2   LinearModel  0.9102          2.07\n",
+              "3           SGD  0.7618          1.50\n",
+              "4  RandomForest  0.8816          2.32\n",
+              "5    ExtraTrees  0.8460          3.31\n",
+              "6       XGBoost  0.7676         56.18\n",
+              "7      CatBoost  0.9118         15.84\n",
+              "8           MLP  0.9089         13.34"
             ],
-            "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Model_Name</th>\n      <th>Score</th>\n      <th>Time_Fit_Sec</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>LightGBM</td>\n      <td>0.7906</td>\n      <td>0.52</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>KNeighbors</td>\n      <td>0.6894</td>\n      <td>0.03</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>LinearModel</td>\n      <td>0.7991</td>\n      <td>0.03</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>SGD</td>\n      <td>0.6557</td>\n      <td>0.03</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>RandomForest</td>\n      <td>0.7847</td>\n      <td>0.34</td>\n    </tr>\n    <tr>\n      <th>5</th>\n      <td>ExtraTrees</td>\n      <td>0.7690</td>\n      <td>0.25</td>\n    </tr>\n    <tr>\n      <th>6</th>\n      <td>XGBoost</td>\n      <td>0.6742</td>\n      <td>0.45</td>\n    </tr>\n    <tr>\n      <th>7</th>\n      <td>CatBoost</td>\n      <td>0.8024</td>\n      <td>2.01</td>\n    </tr>\n    <tr>\n      <th>8</th>\n      <td>MLP</td>\n      <td>0.7538</td>\n      <td>0.30</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+            "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Model_Name</th>\n      <th>Score</th>\n      <th>Time_Fit_Sec</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>LightGBM</td>\n      <td>0.9088</td>\n      <td>129.46</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>KNeighbors</td>\n      <td>0.8476</td>\n      <td>41.37</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>LinearModel</td>\n      <td>0.9102</td>\n      <td>2.07</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>SGD</td>\n      <td>0.7618</td>\n      <td>1.50</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>RandomForest</td>\n      <td>0.8816</td>\n      <td>2.32</td>\n    </tr>\n    <tr>\n      <th>5</th>\n      <td>ExtraTrees</td>\n      <td>0.8460</td>\n      <td>3.31</td>\n    </tr>\n    <tr>\n      <th>6</th>\n      <td>XGBoost</td>\n      <td>0.7676</td>\n      <td>56.18</td>\n    </tr>\n    <tr>\n      <th>7</th>\n      <td>CatBoost</td>\n      <td>0.9118</td>\n      <td>15.84</td>\n    </tr>\n    <tr>\n      <th>8</th>\n      <td>MLP</td>\n      <td>0.9089</td>\n      <td>13.34</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
           },
           "metadata": {},
-          "execution_count": 11
+          "execution_count": 9
         }
       ],
       "source": [
