--- a/examples/02_Data_Cleaning_and_Encoding_(DataPrepare).ipynb
+++ b/examples/02_Data_Cleaning_and_Encoding_(DataPrepare).ipynb
@@ -432,7 +432,7 @@
     }
    ],
    "source": [
-    "de.save('de', dir='./save/')"
+    "de.save('de', folder='./save/')"
    ]
   },
   {
@@ -450,7 +450,7 @@
    ],
    "source": [
     "de_new = DataPrepare()\n",
-    "de_new = de.load('de', dir='./save/')"
+    "de_new = de.load('de', folder='./save/')"
    ]
   },
   {
