--- a/examples/prod_sample/fit_model.ipynb
+++ b/examples/prod_sample/fit_model.ipynb
@@ -232,7 +232,7 @@
     }
    ],
    "source": [
-    "model.save('AutoML_model')"
+    "model.save('AutoML_model', folder='./model/')"
    ]
   },
   {
